css/styles.css
.hero-bg {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url('../img/accessibility-hero-banner.jpg') no-repeat center center fixed;
  background-size: cover;
}

.tabs {
  margin-bottom: -1px !important;
  position: relative;
}
.tab-content {
  padding: 2rem;
}
.tab-pane {
  display: none;
}
.tab-pane.is-active {
  display: block;
  position: relative;
}
.is-active {
  display: initial;
}

.cent {
  display: block;
  margin: 10px auto;
  padding: 5px;
  border: 1px solid #ccc;
}

.video {
  display: block;
  margin: 0 auto;
}

.embed-container {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
}
.embed-container iframe,
.embed-container object,
.embed-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.box.cta {
  border-radius: 0;
  border-left: none;
  border-right: none;
}

.features,
.medias {
  padding: 3rem 0;
}

.features .fa,
.features .fab {
  font-size: 8rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
  color: #209cee;
}

.is-shady {
  animation: flyintoright 0.4s backwards;
  background: #fff;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 0;
  border-radius: 4px;
  display: inline-block;
  margin: 10px;
  position: relative;
  transition: all 0.2s ease-in-out;
}
.is-shady:hover {
  box-shadow: 0 10px 16px rgba(0, 0, 0, 0.13), 0 6px 6px rgba(0, 0, 0, 0.19);
}

.has-same-height .card {
  height: 350px;
  overflow: hidden;
}

.skills-content .media + .media {
  margin-top: 0.5rem;
}

.skills-content .progress {
  height: 4px !important;
}

.section-heading {
  margin-bottom: 2rem;
}

.info-tiles {
  margin: 0.75rem auto;
  padding: 0 0.75rem;
}

.button.is-primary.is-alt {
  background: linear-gradient(to bottom, #0072ff, #00c6ff);
  font-weight: 700;
  font-size: 14px;
  height: 3rem;
  line-height: 2.8;
  margin-bottom: 1rem;
}
.post {
  margin: 1rem;
  padding-bottom: 1rem;
  border-bottom: 1px solid #e6eaee;
}
.post:last-child {
  padding-bottom: 0;
  border-bottom: none;
}

.forum-list li {
  margin-bottom: 0.5rem;
}

@media screen and (max-width: 1087px) {
  .navbar-menu {
    background-color: #888;
  }
}

.logo-link {
  height: 70px;
  width: 250px;
}

.logo-link img {
  width: 100%;
}

li {
  list-style: none;
}

.hero.is-fullheight {
  min-height: 70vh;
}

.blockquote {
  background-color: #f5f5f5;
  border-left: 5px solid #dbdbdb;
  padding: 1.25em 1.5em;
}

.ol-list li {
  position: relative;
  display: flex;
  align-items: center;
}

.ol-list li::before {
  content: '';
  background: url(../img/arrow_sans_right-512.png) no-repeat;
  display: inline-block;
  text-align: center;
  margin: 5px 10px;
  line-height: 40px;
  width: 40px;
  height: 40px;
  background-size: contain;
}

/* my styles */
.input:focus,
.navbar-item.logo-link:focus,
.button.is-white.is-outlined:focus,
.button.is-info:focus,
sup a:focus,
.is-3.title + p a:focus,
.content p a:focus,
.tabs li a:focus,
.content p a b:focus,
.tile.is-child.box .button:focus,
a.box:focus,
.is-pulled-right a:focus,
.card-footer a:focus,
.button.is-primary.is-block:focus,
.menu-list.forum-list .tag:focus,
.control a:focus,
.column.is-3 ul li a:focus,
.column.is-4 ul li a:focus,
.soc a:focus,
.soc + p a:focus,
.input.is-success:focus,
.input.is-danger:focus,
.select select:focus,
.control textarea:focus,
.control input[type='checkbox']:focus,
.control input[type='radio']:focus,
.control .button.is-link:focus,
.control .button.is-text:focus {
  outline: 0;
  border-radius: 2px;
  box-shadow: 0 0 2px 1.5px #bc6e6e, 0 0 3px 3px #f279dd;
}

